Fix react-select dropdowns z-index 2

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -78,7 +78,7 @@ h2 {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 10;
+  z-index: 1;
   background: white;
 }
 
